fix cropped quotes on safari

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -135,10 +135,14 @@ body {
 			color: #3b81ff;
 			font-style: italic;
 			background-color: rgba(0, 0, 0, 0.7);
+			padding-right: 3px;
+			/* fix cropped quotes on safari */
+			&:before {
+				content: '\201C';
+			}
 
-			&:before,
 			&:after {
-				content: '"';
+				content: '\201D';
 			}
 		}
 
@@ -327,37 +331,37 @@ body {
 	.tablet {
 		display: none;
 	}
-								/*
-								.mobile {
-									h3,
-									p {
-										display: none;
-									}
+																					/*
+																					.mobile {
+																						h3,
+																						p {
+																							display: none;
+																						}
 
-									.clip-photo {
-										width: 70px;
-										height: 70px;
-									}
+																						.clip-photo {
+																							width: 70px;
+																							height: 70px;
+																						}
 
-									.clip-icon {
-										width: 18px;
-										height: 18px;
-									}
+																						.clip-icon {
+																							width: 18px;
+																							height: 18px;
+																						}
 
-									.experts-list {
-										height: 160px;
-										padding: 30px;
+																						.experts-list {
+																							height: 160px;
+																							padding: 30px;
 
-										li {
-											width: 33.3333%;
+																							li {
+																								width: 33.3333%;
 
-											&:nth-child(even) {
-												margin-top: 80px;
-											}
-										}
-									}
-								}
-								*/
+																								&:nth-child(even) {
+																									margin-top: 80px;
+																								}
+																							}
+																						}
+																					}
+																					*/
 	.pointer-wrp {
 		position: absolute;
 		z-index: -1;
@@ -460,6 +464,12 @@ body {
 	}
 
 	@media only screen and (max-width: 667px), (max-device-width: 667px) {
+		height: 340px !important;
+
+		.experts-wrap {
+			height: auto;
+		}
+
 		&:before {
 			content: "";
 			background: url(../img/bg-circles-mobile-static.png?201512011121);
@@ -503,6 +513,7 @@ body {
 
 			li {
 				width: 33.3333% !important;
+				height: auto;
 
 				&:nth-child(n+4) {
 					display: none;
@@ -534,6 +545,7 @@ body {
 		.clip-icon {
 			width: 18px;
 			height: 18px;
+			bottom: 0%;
 		}
 	}
 }
